# tda-of-digital-images

./: .env.example  .gitignore  README.md  default.yaml  pyproject.toml  runner.py
exp/: _run_phtx.py  aggregate_preliminary_results.py  exp_directions.py  exp_fixed_encoders.py  exp_invariance.py  exp_main.py  exp_n_filters.py  exp_preliminary_benchmark.py  make_datasets.py  run_capsnet.py  run_kan.py  run_latent_persformer.py  run_linear_persformer.py  run_mixer.py  run_mlp.py  run_perceiver.py  run_persformer.py  run_persistence_image.py  run_persistence_landscape.py  run_persistence_silhouette.py  run_phts.py  run_phtx.py  run_resnet.py  run_vit.py  runs.py
exp/artifacts/: preliminary_manifest_1777379715.json  preliminary_manifest_1777379800.json
exp/config/: directions.yaml  fixed_encoders_smoke.yaml  invariance.yaml  main.yaml  n_filters.yaml
exp/pipelines/: hp_search.py  main_3d_paper.py  orchestrator.py  scaling_seqlen.py
exp/runners/: _shim.py  run_latent_persformer.py  run_linear_persformer.py  run_mlp.py  run_persformer.py  run_persistence_image.py  run_persistence_landscape.py  run_persistence_silhouette.py  run_phts.py  run_resnet.py  run_vit.py
mlruns/0/: meta.yaml
notebooks/: examples.ipynb  mlflow_preliminary_analysis.ipynb  test_datasets.ipynb
report/: coursework.tex  references.bib  title_kr.tex
scripts/: mlflow_summarize.py  smoke_test_dataloader.py
src/: __utils.py  _data.py  _trainer.py  _utils.py  data.py  logger.py  persistence.py  registry.py  tmp.py  trainer.py  transforms.py  transforms_dir.py  utils.py
src/capsnet/: layers.py  (+1 more)
(+249 files in other folders)
